# scron

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  main.py  makefile  promtail-config.yaml  pyproject.toml  taskfile.yml
.claude/: settings.local.json
.github/workflows/: build-and-push.yml
alembic/: env.py
alembic/versions/: 0001_seed_templates.py  fd80b7ede9aa_create_initial_tables.py
app/: __init__.py
app/api/: __init__.py  analytics_routes.py  auth_routes.py  config_routes.py  deps.py  job_routes.py  notification_routes.py  rate_limit.py  schemas.py  tag_routes.py  template_routes.py  user_routes.py  ws_routes.py
app/common/: constants.py  schemas.py
app/db/: __init__.py  database.py  models.py
app/services/: __init__.py  analytics_service.py  auth_service.py  crypto_service.py  job_service.py  log_broadcaster.py  notification_service.py  scheduler_service.py
app/utils/: logging_utils.py
k8s/base/: argocd-app.yaml  deployment.yaml  externalsecret.yaml  service.yaml
k8s/overlays/prod/: kustomization.yaml
tests/: conftest.py  test_analytics.py  test_auth_routes.py  test_auth_service.py  test_crypto_service.py  test_job_routes.py  test_job_service.py  test_log_broadcaster.py  test_new_features.py  test_notification_service.py  test_rate_limit.py  test_scheduler_service.py
